apps/base/tool-homepage/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: homepage
      app.kubernetes.io/component: homepage
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homepage
        app.kubernetes.io/component: homepage
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000 # node
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: homepage
      automountServiceAccountToken: true
      containers:
      - name: homepage
        image: "registry.lan/homepage:v2.4.0"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          name: http
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        resources:
          requests:
            cpu: 25m
            memory: 128Mi
          limits:
            cpu: 100m
            memory: 256Mi
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /api/healthcheck
            port: http
          initialDelaySeconds: 3
          periodSeconds: 5
        volumeMounts:
        - name: cluster-config
          mountPath: /etc/localtime
          subPath: localtime
          readOnly: true
        - name: homepage-config
          mountPath: /app/config
        - name: logs-volume
          mountPath: /app/config/logs
      volumes:
      - name: cluster-config
        configMap:
          name: cluster-config
      - name: homepage-config
        secret:
          secretName: homepage-config
      - name: config-volume
        emptyDir: {}
      - name: logs-volume
        emptyDir: {}
      imagePullSecrets:
      - name: docker-config
      nodeSelector:
        capability/general-purpose: 'yes'
