apps/base/tool-homepage/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
  ports:
  - name: http
    port: 3000
  selector:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/component: homepage
